# Master-Game

./: .gitignore  README.md  main.py  pyproject.toml
master_game/config/: __init__.py  config.py  logger.py
master_game/controllers/: AuthificationController.py  CharacterController.py  FirstPageController.py  __init__.py  authification_controller.py  character_controller.py  first_page_controller.py  game_controller.py  graphql_controller.py
master_game/models/: __init__.py  query.py  tables.py
master_game/models/character/: __init__.py  armor.py  character_sheet.py  character_sheet_query.py  stats.py  weapon.py
master_game/models/room/: room.py
master_game/models/user/: __init__.py  user.py  user_query.py  user_status.py
master_game/services/: __init__.py  authification_service.py  cache_service.py  character_service.py  database_service.py  room_service.py  user_service.py
resources/data/: users.db
resources/data/schemas/: user.graphql
resources/pages/: authenticate.html  charpage.html  game.html  index.html  registration.html  userpage.html
resources/pages/js/: game.js  graphql.js  sockets.js  viewusersdata.json
resources/pages/style/: authenticate.css  forms.css  game.css  global.css  header.css  index.css  registration.css  userpage.css
test/database_tests/: cache_test.py  database_requests_test.py  database_service_test.py  user_service_test.py
