[tool.poetry]
name = "mastergame"
version = "0.1.0"
description = "Master game is a website."
authors = ["RomrerioPrevious <ggJohn12345@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
graphene = "2.0.0"
graphene-sqlalchemy = "2.0.0"
redis = "^5.0.2"
flask-socketio = "^5.3.6"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
