[tool.poetry]
name = "mastergame"
version = "0.1.0"
description = "Master game is a website."
authors = ["RomrerioPrevious <ggJohn12345@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-socketio = "^5.3.6"
pytest = "^8.0.2"
ariadne = "^0.23.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
